# ucv_ate_si_lab03

./: README.md  pyproject.toml  requirements.txt
conf/base/: parameters.yml
src/ucv_ate_si_lab03/: __init__.py  pipeline_registry.py  settings.py
src/ucv_ate_si_lab03/pipelines/histogram/: analyzer.py  nodes.py  pipeline.py
tests/: test_analyzer.py
